--- a/.env
+++ b/.env
@@ -4,11 +4,11 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=
-NEXTAUTH_SECRET=
+DATABASE_URL=DATABASE_URL='mysql://qim69jd6c62yd7h0edko:pscale_pw_LM9rLPxRkdChngMcKoMq43gHiTI98xIIVlbTHA4at8r@aws.connect.psdb.cloud/reddit-clone?sslaccept=strict'
+NEXTAUTH_SECRET=mylittlesecret
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=810467887137-4pecdglrulcr5grtmkbm924os9qk0404.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 UPLOADTHING_SECRET=
 UPLOADTHING_APP_ID=
