--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@editorjs/editorjs": "^2.27.2",
+    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
     "@prisma/client": "^4.16.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
@@ -24,6 +26,7 @@
     "eslint-config-next": "13.4.7",
     "lucide-react": "^0.257.0",
     "next": "13.4.7",
+    "next-auth": "^4.24.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
